Cleaning data - Olan

--- a/data/olan_cleaning.ipynb
+++ b/data/olan_cleaning.ipynb
@@ -10,12 +10,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.7.7-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
+   "name": "Python 3.7.7 64-bit ('pyvizenv3': conda)",
+   "display_name": "Python 3.7.7 64-bit ('pyvizenv3': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "2548420f6680aedd74e3e2beb38ae873a37a41cd3aad112f0ad46785fbe9b2a9"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -23,16 +28,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import plotly.express as px"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,61 +102,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "    Arrest Year County    Age Group  Gender         Race Code     NCIC Code  \\\n",
-       "0          2012  Adams  21 or older  Female         Hispianic  MJPossession   \n",
-       "1          2012  Adams  21 or older    Male  African American  MJPossession   \n",
-       "2          2012  Adams  21 or older    Male             Asian  MJPossession   \n",
-       "3          2012  Adams  21 or older    Male           Unknown  MJPossession   \n",
-       "4          2012  Adams  21 or older    Male             White  MJPossession   \n",
-       "5          2012  Adams     Under 18    Male  African American  MJPossession   \n",
-       "6          2012  Adams     Under 18    Male           Unknown  MJPossession   \n",
-       "7          2012  Adams  21 or older    Male         Hispianic       MJSales   \n",
-       "8          2012  Adams     18 to 20  Female             White  MJPossession   \n",
-       "9          2012  Adams  21 or older    Male         Hispianic  MJPossession   \n",
-       "10         2012  Adams  21 or older    Male           Unknown  MJPossession   \n",
-       "11         2012  Adams     18 to 20    Male  African American  MJPossession   \n",
-       "12         2012  Adams     18 to 20    Male         Hispianic  MJPossession   \n",
-       "13         2012  Adams     18 to 20    Male             White  MJPossession   \n",
-       "14         2012  Adams     Under 18  Female         Hispianic  MJPossession   \n",
-       "15         2012  Adams     Under 18    Male             Asian  MJPossession   \n",
-       "16         2012  Adams  21 or older    Male             White  MJProduction   \n",
-       "17         2012  Adams     18 to 20  Female         Hispianic  MJPossession   \n",
-       "18         2012  Adams     18 to 20    Male  African American  MJPossession   \n",
-       "19         2012  Adams     18 to 20    Male         Hispianic  MJPossession   \n",
+       "   Arrest Year County    Age Group  Gender         Race Code     NCIC Code  \\\n",
+       "0         2012  Adams  21 or older  Female         Hispianic  MJPossession   \n",
+       "1         2012  Adams  21 or older    Male  African American  MJPossession   \n",
+       "2         2012  Adams  21 or older    Male             Asian  MJPossession   \n",
+       "3         2012  Adams  21 or older    Male           Unknown  MJPossession   \n",
+       "4         2012  Adams  21 or older    Male             White  MJPossession   \n",
        "\n",
-       "    Number of Arrests  \n",
-       "0                   6  \n",
-       "1                   5  \n",
-       "2                   1  \n",
-       "3                   1  \n",
-       "4                  33  \n",
-       "5                   4  \n",
-       "6                   2  \n",
-       "7                   1  \n",
-       "8                   3  \n",
-       "9                  17  \n",
-       "10                  2  \n",
-       "11                  3  \n",
-       "12                  8  \n",
-       "13                 30  \n",
-       "14                  7  \n",
-       "15                  1  \n",
-       "16                  2  \n",
-       "17                  5  \n",
-       "18                  3  \n",
-       "19                 46  "
+       "   Number of Arrests  \n",
+       "0                  6  \n",
+       "1                  5  \n",
+       "2                  1  \n",
+       "3                  1  \n",
+       "4                 33  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Arrest Year</th>\n      <th>County</th>\n      <th>Age Group</th>\n      <th>Gender</th>\n      <th>Race Code</th>\n      <th>NCIC Code</th>\n      <th>Number of Arrests</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Female</td>\n      <td>Hispianic</td>\n      <td>MJPossession</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Male</td>\n      <td>African American</td>\n      <td>MJPossession</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Male</td>\n      <td>Asian</td>\n      <td>MJPossession</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Male</td>\n      <td>Unknown</td>\n      <td>MJPossession</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Male</td>\n      <td>White</td>\n      <td>MJPossession</td>\n      <td>33</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>Under 18</td>\n      <td>Male</td>\n      <td>African American</td>\n      <td>MJPossession</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>Under 18</td>\n      <td>Male</td>\n      <td>Unknown</td>\n      <td>MJPossession</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Male</td>\n      <td>Hispianic</td>\n      <td>MJSales</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>18 to 20</td>\n      <td>Female</td>\n      <td>White</td>\n      <td>MJPossession</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Male</td>\n      <td>Hispianic</td>\n      <td>MJPossession</td>\n      <td>17</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Male</td>\n      <td>Unknown</td>\n      <td>MJPossession</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>18 to 20</td>\n      <td>Male</td>\n      <td>African American</td>\n      <td>MJPossession</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>18 to 20</td>\n      <td>Male</td>\n      <td>Hispianic</td>\n      <td>MJPossession</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>18 to 20</td>\n      <td>Male</td>\n      <td>White</td>\n      <td>MJPossession</td>\n      <td>30</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>Under 18</td>\n      <td>Female</td>\n      <td>Hispianic</td>\n      <td>MJPossession</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>Under 18</td>\n      <td>Male</td>\n      <td>Asian</td>\n      <td>MJPossession</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Male</td>\n      <td>White</td>\n      <td>MJProduction</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>18 to 20</td>\n      <td>Female</td>\n      <td>Hispianic</td>\n      <td>MJPossession</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>18 to 20</td>\n      <td>Male</td>\n      <td>African American</td>\n      <td>MJPossession</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>18 to 20</td>\n      <td>Male</td>\n      <td>Hispianic</td>\n      <td>MJPossession</td>\n      <td>46</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Arrest Year</th>\n      <th>County</th>\n      <th>Age Group</th>\n      <th>Gender</th>\n      <th>Race Code</th>\n      <th>NCIC Code</th>\n      <th>Number of Arrests</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Female</td>\n      <td>Hispianic</td>\n      <td>MJPossession</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Male</td>\n      <td>African American</td>\n      <td>MJPossession</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Male</td>\n      <td>Asian</td>\n      <td>MJPossession</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Male</td>\n      <td>Unknown</td>\n      <td>MJPossession</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Male</td>\n      <td>White</td>\n      <td>MJPossession</td>\n      <td>33</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 255
+     "execution_count": 14
     }
    ],
    "source": [
@@ -166,15 +142,20 @@
     "#df_tr = MarijuanaArrests.transpose()\n",
     "#df_tr.head(10)\n",
     "\n",
-    "MarijuanaArrests.head(20)"
+    "MarijuanaArrests = pd.read_csv(\"cleandata/COMarijuanaArrestsbyCounties.csv\")\n",
+    "\n",
+    "#MarijuanaArrests.drop(columns=['Age Group', 'Gender', 'Race Code'], inplace=True)\n",
+    "\n",
+    "\n",
+    "#MarijuanaArrests = MarijuanaArrests[['County', 'Arrest Year', 'Age Group', 'Gender', 'Race Code', 'NCIC Code', 'Number of Arrests']]\n",
+    "\n",
+    "#df_tr = MarijuanaArrests.transpose()\n",
+    "#df_tr.head(10)\n",
+    "\n",
+    "#MarijuanaArrests.to_csv(\"cleandata/test.csv\", index=False)\n",
+    "\n",
+    "MarijuanaArrests.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
