--- a/data/olan_cleaning.ipynb
+++ b/data/olan_cleaning.ipynb
@@ -28,17 +28,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import plotly.express as px"
+    "#import plotly.express as px"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,33 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "   Arrest Year County    Age Group  Gender         Race Code     NCIC Code  \\\n",
-       "0         2012  Adams  21 or older  Female         Hispianic  MJPossession   \n",
-       "1         2012  Adams  21 or older    Male  African American  MJPossession   \n",
-       "2         2012  Adams  21 or older    Male             Asian  MJPossession   \n",
-       "3         2012  Adams  21 or older    Male           Unknown  MJPossession   \n",
-       "4         2012  Adams  21 or older    Male             White  MJPossession   \n",
-       "\n",
-       "   Number of Arrests  \n",
-       "0                  6  \n",
-       "1                  5  \n",
-       "2                  1  \n",
-       "3                  1  \n",
-       "4                 33  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Arrest Year</th>\n      <th>County</th>\n      <th>Age Group</th>\n      <th>Gender</th>\n      <th>Race Code</th>\n      <th>NCIC Code</th>\n      <th>Number of Arrests</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Female</td>\n      <td>Hispianic</td>\n      <td>MJPossession</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Male</td>\n      <td>African American</td>\n      <td>MJPossession</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Male</td>\n      <td>Asian</td>\n      <td>MJPossession</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Male</td>\n      <td>Unknown</td>\n      <td>MJPossession</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2012</td>\n      <td>Adams</td>\n      <td>21 or older</td>\n      <td>Male</td>\n      <td>White</td>\n      <td>MJPossession</td>\n      <td>33</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 14
-    }
-   ],
+   "outputs": [],
    "source": [
     "#df = pd.read_csv(\"rawdata/Olan-DPS-Colorado-Marijuana-Arrests.csv\")\n",
     "#df.to_csv(\"cleandata/COMarijuanaArrestsbyCounties.csv\", index=False)\n",
@@ -142,7 +118,7 @@
     "#df_tr = MarijuanaArrests.transpose()\n",
     "#df_tr.head(10)\n",
     "\n",
-    "MarijuanaArrests = pd.read_csv(\"cleandata/COMarijuanaArrestsbyCounties.csv\")\n",
+    "#MarijuanaArrests = pd.read_csv(\"cleandata/COMarijuanaArrestsbyCounties.csv\")\n",
     "\n",
     "#MarijuanaArrests.drop(columns=['Age Group', 'Gender', 'Race Code'], inplace=True)\n",
     "\n",
@@ -154,7 +130,29 @@
     "\n",
     "#MarijuanaArrests.to_csv(\"cleandata/test.csv\", index=False)\n",
     "\n",
-    "MarijuanaArrests.head()"
+    "#MarijuanaArrests.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df = pd.read_csv(\"rawdata/Olan-DPS-Marijuana-Offenses.csv\")\n",
+    "#df.to_csv(\"cleandata/COMarijuanaOffenses.csv\", index=False)\n",
+    "#-------------------------------------------------------------------------------------------------------------------\n",
+    "## DELETE UNWANTED COLUMNS\n",
+    "#MJOffenses = pd.read_csv('cleandata/COMarijuanaOffenses.csv')\n",
+    "#MJOffenses = MJOffenses.drop(columns=['AgeGroup', 'Agency', 'Gender', 'RaceCode', 'Location', 'LocationGroup'])\n",
+    "#-------------------------------------------------------------------------------------------------------------------\n",
+    "## FILLED IN BLANK COUNTIES AND RENAMED COLUMNS\n",
+    "#MJOffenses['County'] = MJOffenses['County'].replace([None],\"N/A\")\n",
+    "#MJOffenses.columns = ['Year', 'County', 'Offense Type', 'Number of Offenses']\n",
+    "#-------------------------------------------------------------------------------------------------------------------\n",
+    "#MJOffenses.to_csv(\"cleandata/COMarijuanaOffenses.csv\", index=False)\n",
+    "\n",
+    "#MJOffenses.head(20)"
    ]
   },
   {
