--- a/data/olan_cleaning.ipynb
+++ b/data/olan_cleaning.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
     "\n",
     "#-------------------------------------------------------------------------------------------------------------------\n",
     "# Start cleaning file\n",
-    "#DetailedCountiesGDP = pd.read_csv(\"cleandata/COGDPbyCounties-detailed.csv\")\n",
+    "DetailedCountiesGDP = pd.read_csv(\"cleandata/COGDPbyCounties-detailed.csv\")\n",
     "\n",
     "#DetailedCountiesGDP.drop(df.tail(10).index,inplace=True)\n",
     "\n",
@@ -74,14 +74,20 @@
     "\n",
     "#DetailedCountiesGDP.to_csv(\"cleandata/COGDPbyCounties-detailed.csv\", index=False)\n",
     "#-------------------------------------------------------------------------------------------------------------------\n",
+    "#DetailedCountiesGDP = DetailedCountiesGDP.drop(DetailedCountiesGDP.index[1])\n",
     "\n",
-    "#Group data\n",
-    "#Transpose"
+    "#DetailedCountiesGDP.head()\n",
+    "\n",
+    "#ColoradoDF = DetailedCountiesGDP[(DetailedCountiesGDP.GeoName=='Colorado')]\n",
+    "\n",
+    "#ColoradoDF.to_csv(\"cleandata/COGDPDetailed.csv\", index=False)\n",
+    "\n",
+    "#ColoradoDF.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,13 +102,18 @@
     "#No null values, change columns type\n",
     "#yearcols = [\"2010\", \"2011\", \"2012\", \"2013\", \"2014\", \"2015\", \"2016\", \"2017\", \"2018\"]\n",
     "#TotalCountiesGDP[yearcols] = TotalCountiesGDP[yearcols].astype('int')\n",
+    "\n",
+    "#TotalCountiesGDP = TotalCountiesGDP.drop([0])\n",
     "#TotalCountiesGDP.to_csv(\"cleandata/COGDPbyCounties-Totals.csv\", index=False)\n",
-    "\n"
+    "\n",
+    "\n",
+    "\n",
+    "#TotalCountiesGDP.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,38 +129,62 @@
     "#df_tr = MarijuanaArrests.transpose()\n",
     "#df_tr.head(10)\n",
     "\n",
-    "#MarijuanaArrests = pd.read_csv(\"cleandata/COMarijuanaArrestsbyCounties.csv\")\n",
+    "#MarijuanaArrests = pd.read_csv(\"cleandata/COMarijuanaArrests.csv\")\n",
     "\n",
     "#MarijuanaArrests.drop(columns=['Age Group', 'Gender', 'Race Code'], inplace=True)\n",
     "\n",
     "\n",
     "#MarijuanaArrests = MarijuanaArrests[['County', 'Arrest Year', 'Age Group', 'Gender', 'Race Code', 'NCIC Code', 'Number of Arrests']]\n",
+    "#-------------------------------------------------------------------------------------------------------------------\n",
+    "##DROP SOME MORE COLUMNS & RENAME COLUMNS\n",
+    "#MarijuanaArrests =  MarijuanaArrests.drop(columns=['Age Group', 'Gender', 'Race Code'])\n",
+    "#MarijuanaArrests.columns = ['Year', 'County', 'Offense Type', 'Number of Arrests']\n",
+    "#-------------------------------------------------------------------------------------------------------------------\n",
+    "#MarijuanaArrests['County'] = MarijuanaArrests['County'].replace(['#NULL'],\"N/A\")\n",
+    "#MarijuanaArrests['County'] = MarijuanaArrests['County'].replace([None],\"Location not Available\")\n",
+    "#MarijuanaArrests['County'] = MarijuanaArrests['County'].replace([\"Acet (All Crimes Enforcement Team)\"],\"Location not Available\")\n",
+    "#-------------------------------------------------------------------------------------------------------------------\n",
     "\n",
-    "#df_tr = MarijuanaArrests.transpose()\n",
-    "#df_tr.head(10)\n",
-    "\n",
-    "#MarijuanaArrests.to_csv(\"cleandata/test.csv\", index=False)\n",
+    "#MarijuanaArrests.to_csv(\"cleandata/COMarijuanaArrests.csv\", index=False)\n",
     "\n",
     "#MarijuanaArrests.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Year                  6790\n",
+       "County                6790\n",
+       "Offense Type          6790\n",
+       "Number of Offenses    6790\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 65
+    }
+   ],
    "source": [
     "#df = pd.read_csv(\"rawdata/Olan-DPS-Marijuana-Offenses.csv\")\n",
     "#df.to_csv(\"cleandata/COMarijuanaOffenses.csv\", index=False)\n",
     "#-------------------------------------------------------------------------------------------------------------------\n",
     "## DELETE UNWANTED COLUMNS\n",
-    "#MJOffenses = pd.read_csv('cleandata/COMarijuanaOffenses.csv')\n",
+    "MJOffenses = pd.read_csv('cleandata/COMarijuanaOffenses.csv')\n",
     "#MJOffenses = MJOffenses.drop(columns=['AgeGroup', 'Agency', 'Gender', 'RaceCode', 'Location', 'LocationGroup'])\n",
     "#-------------------------------------------------------------------------------------------------------------------\n",
     "## FILLED IN BLANK COUNTIES AND RENAMED COLUMNS\n",
     "#MJOffenses['County'] = MJOffenses['County'].replace([None],\"N/A\")\n",
     "#MJOffenses.columns = ['Year', 'County', 'Offense Type', 'Number of Offenses']\n",
     "#-------------------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "MJOffenses.isnull().count()\n",
+    "\n",
     "#MJOffenses.to_csv(\"cleandata/COMarijuanaOffenses.csv\", index=False)\n",
     "\n",
     "#MJOffenses.head(20)"
