--- a/data/olan_cleaning.ipynb
+++ b/data/olan_cleaning.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
     "\n",
     "#-------------------------------------------------------------------------------------------------------------------\n",
     "# Start cleaning file\n",
-    "DetailedCountiesGDP = pd.read_csv(\"cleandata/COGDPbyCounties-detailed.csv\")\n",
+    "#DetailedCountiesGDP = pd.read_csv(\"cleandata/COGDPbyCounties-detailed.csv\")\n",
     "\n",
     "#DetailedCountiesGDP.drop(df.tail(10).index,inplace=True)\n",
     "\n",
@@ -80,14 +80,17 @@
     "\n",
     "#ColoradoDF = DetailedCountiesGDP[(DetailedCountiesGDP.GeoName=='Colorado')]\n",
     "\n",
+    "#ColoradoDF.columns = ['Location', 'Description', \"2010\", \"2011\", \"2012\", \"2013\", \"2014\", \"2015\", \"2016\", \"2017\", \"2018\"]\n",
+    "\n",
     "#ColoradoDF.to_csv(\"cleandata/COGDPDetailed.csv\", index=False)\n",
     "\n",
-    "#ColoradoDF.head()\n"
+    "#ColoradoDF.head()\n",
+    "#DetailedCountiesGDP.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,6 +106,8 @@
     "#yearcols = [\"2010\", \"2011\", \"2012\", \"2013\", \"2014\", \"2015\", \"2016\", \"2017\", \"2018\"]\n",
     "#TotalCountiesGDP[yearcols] = TotalCountiesGDP[yearcols].astype('int')\n",
     "\n",
+    "#TotalCountiesGDP.columns = ['Location', \"2010\", \"2011\", \"2012\", \"2013\", \"2014\", \"2015\", \"2016\", \"2017\", \"2018\"]\n",
+    "\n",
     "#TotalCountiesGDP = TotalCountiesGDP.drop([0])\n",
     "#TotalCountiesGDP.to_csv(\"cleandata/COGDPbyCounties-Totals.csv\", index=False)\n",
     "\n",
@@ -113,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,50 +157,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Year                  6790\n",
-       "County                6790\n",
-       "Offense Type          6790\n",
-       "Number of Offenses    6790\n",
-       "dtype: int64"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 65
-    }
-   ],
+   "outputs": [],
    "source": [
     "#df = pd.read_csv(\"rawdata/Olan-DPS-Marijuana-Offenses.csv\")\n",
     "#df.to_csv(\"cleandata/COMarijuanaOffenses.csv\", index=False)\n",
     "#-------------------------------------------------------------------------------------------------------------------\n",
     "## DELETE UNWANTED COLUMNS\n",
-    "MJOffenses = pd.read_csv('cleandata/COMarijuanaOffenses.csv')\n",
+    "#MJOffenses = pd.read_csv('cleandata/COMarijuanaOffenses.csv')\n",
     "#MJOffenses = MJOffenses.drop(columns=['AgeGroup', 'Agency', 'Gender', 'RaceCode', 'Location', 'LocationGroup'])\n",
     "#-------------------------------------------------------------------------------------------------------------------\n",
     "## FILLED IN BLANK COUNTIES AND RENAMED COLUMNS\n",
     "#MJOffenses['County'] = MJOffenses['County'].replace([None],\"N/A\")\n",
     "#MJOffenses.columns = ['Year', 'County', 'Offense Type', 'Number of Offenses']\n",
+    "#MJOffenses['County'] = MJOffenses['County'].replace([None],\"Location not Available\")\n",
     "#-------------------------------------------------------------------------------------------------------------------\n",
-    "\n",
-    "MJOffenses.isnull().count()\n",
-    "\n",
     "#MJOffenses.to_csv(\"cleandata/COMarijuanaOffenses.csv\", index=False)\n",
     "\n",
     "#MJOffenses.head(20)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
