--- a/data/olan_cleaning.ipynb
+++ b/data/olan_cleaning.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,9 +83,24 @@
     "#ColoradoDF.columns = ['Location', 'Description', \"2010\", \"2011\", \"2012\", \"2013\", \"2014\", \"2015\", \"2016\", \"2017\", \"2018\"]\n",
     "\n",
     "#ColoradoDF.to_csv(\"cleandata/COGDPDetailed.csv\", index=False)\n",
+    "#-------------------------------------------------------------------------------------------------------------------\n",
+    "##REMOVED LOCATION COLUMN\n",
+    "#ExtraCleaning = pd.read_csv(\"cleandata/COGDPDetailed.csv\")\n",
+    "#ExtraCleaning.drop(columns=['Location'], inplace=True)\n",
+    "#-------------------------------------------------------------------------------------------------------------------\n",
+    "##REMOVE INDEX, TRANSPOSE, DROP TOTAL COLUMNS\n",
+    "#ExtraCleaning.set_index(\"Description\", inplace=True)\n",
+    "#ExtraCleaning = ExtraCleaning.transpose()\n",
+    "\n",
+    "#ExtraCleaning.drop(columns=['All industry total', '  Private industries', 'Private goods-producing industries 2/', 'Private services-providing industries 3/'], inplace=True)\n",
+    "\n",
+    "#ExtraCleaning.to_csv(\"cleandata/COGDPDetailed.csv\", index=True)\n",
+    "\n",
     "\n",
     "#ColoradoDF.head()\n",
-    "#DetailedCountiesGDP.head()\n"
+    "#DetailedCountiesGDP.head()\n",
+    "#ExtraCleaning.head(10)\n",
+    "#ExtraCleaning.columns\n"
    ]
   },
   {
@@ -118,9 +133,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-5ad7c2c41108>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m#df_tr.head(10)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mMarijuanaArrests\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"cleandata/COMarijuanaArrests.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m#MarijuanaArrests.drop(columns=['Age Group', 'Gender', 'Race Code'], inplace=True)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#df = pd.read_csv(\"rawdata/Olan-DPS-Colorado-Marijuana-Arrests.csv\")\n",
     "#df.to_csv(\"cleandata/COMarijuanaArrestsbyCounties.csv\", index=False)\n",
